Fix button spillage. Pixel tweaks. [Closes #99]

--- a/less/app-chat.less
+++ b/less/app-chat.less
@@ -27,7 +27,7 @@ live-chat { clear: both; }
 
 .chat-schedule-wrap,
 .chat-body-wrap {
-	margin-top: 16px;
+        margin-top: 16px;
 }
 
 .chat-body {
@@ -157,7 +157,7 @@ live-chat { clear: both; }
 		textarea {
             width: 585px;
 			height: 32px;
-			margin-right: 11px;
+			margin-right: 5px;
             margin-left: 15px;
 		}
 		.chat-input {
@@ -380,6 +380,11 @@ live-chat { clear: both; }
         margin:none;
     }
 
+    .chat-body-wrap {
+            padding-top: 3px;
+            margin-top: 0px;
+    }
+
     #filter-wrapper {
         margin-right: 0px;
     }
@@ -418,5 +423,11 @@ live-chat { clear: both; }
 
     #filter-wrapper {
         padding-left: 0px;
+    }
+
+    .chat-user-entry {
+        .chat-editor {
+            textarea { clear: left; width: 60%; }
+        }
     }
 }
